unpackaged/main/default/objects/Opportunity/fields/Account_Acquirer__c.field-meta.xml
<CustomField>
    <fullName>Account_Acquirer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Acquirer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>contains</operation>
            <value>Acquirer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Merchant Opportunities</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>