unpackaged/main/default/objects/Opportunity/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account City</label>
    <type>Text</type>
</CustomField>