unpackaged/main/default/objects/Opportunity/fields/Acq_GP__c.field-meta.xml
<CustomField>
    <fullName>Acq_GP__c</fullName>
    <formula>(Total_V_MC_Acq_Opportunity__c * Visa_MC_Probability__c) + (Total_Wallet_Opportunity__c *  Wallets_Probability__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acq GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>