unpackaged/main/default/objects/Opportunity/fields/Acquiring_Bank__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Bank__c</fullName>
    <formula>Account.Acquirer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquiring Bank</label>
    <type>Text</type>
</CustomField>