unpackaged/main/default/objects/Opportunity/fields/Acquisition_Partner__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquisition Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>01224000000LFTM</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Merchant Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>