unpackaged/main/default/objects/Opportunity/fields/Additional_Income__c.field-meta.xml
<CustomField>
    <fullName>Additional_Income__c</fullName>
    <label>Additional Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>