unpackaged/main/default/objects/Opportunity/fields/Additional_Income_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Income_Comments__c</fullName>
    <label>Additional Income Comments</label>
    <type>TextArea</type>
</CustomField>