unpackaged/main/default/objects/Opportunity/fields/Additional_Refund_Methods__c.field-meta.xml
<CustomField>
    <fullName>Additional_Refund_Methods__c</fullName>
    <label>Additional Refund Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>TF_Proposed_Solution__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOPOS</fullName>
            </value>
            <value>
                <fullName>Alipay Standard Refund</fullName>
            </value>
            <value>
                <fullName>Alipay Instant Store</fullName>
            </value>
            <value>
                <fullName>Fast Refund Store</fullName>
            </value>
            <value>
                <fullName>CTrip Pass</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>