unpackaged/main/default/objects/Opportunity/fields/Adj_Annual_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>Adj_Annual_Net_Commission__c</fullName>
    <formula>IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c  &lt;= 0), Account.TF_Net_Commission_Last_12M__c / 1, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 1), Account.TF_Net_Commission_Last_12M__c / 0.9331973, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 2), Account.TF_Net_Commission_Last_12M__c / 0.8783086, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 3), Account.TF_Net_Commission_Last_12M__c / 0.8201378, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 4), Account.TF_Net_Commission_Last_12M__c / 0.7555707, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 5), Account.TF_Net_Commission_Last_12M__c / 0.6816043, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 6), Account.TF_Net_Commission_Last_12M__c / 0.5999116, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 7), Account.TF_Net_Commission_Last_12M__c / 0.5001037, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 8), Account.TF_Net_Commission_Last_12M__c / 0.379803, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 9), Account.TF_Net_Commission_Last_12M__c / 0.2700752, 
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 10), Account.TF_Net_Commission_Last_12M__c / 0.1573122,
IF(AND(Contract_Start_Date_Month__c - Account.Calendar_Month__c = 11), Account.TF_Net_Commission_Last_12M__c / 0.0752389
,0))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adj Annual Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>