unpackaged/main/default/objects/Opportunity/fields/Adjusted_SiS__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_SiS__c</fullName>
    <formula>Wirecard_Uptake__c * Chinese_SiS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted SiS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>