unpackaged/main/default/objects/Opportunity/fields/Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Value__c</fullName>
    <formula>Opportunity_Value__c *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>