unpackaged/main/default/objects/Opportunity/fields/Alipay1__c.field-meta.xml
<CustomField>
    <fullName>Alipay1__c</fullName>
    <formula>IF(Alipay_of_Total__c &gt; 0, TRUE,
IF(WeChat_of_Total__c &gt; 0, TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alipay/WeChat Pay</label>
    <type>Checkbox</type>
</CustomField>