unpackaged/main/default/objects/Opportunity/fields/Alipay__c.field-meta.xml
<CustomField>
    <fullName>Alipay__c</fullName>
    <label>Alipay %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>