unpackaged/main/default/objects/Opportunity/fields/Alipay_of_Total__c.field-meta.xml
<CustomField>
    <fullName>Alipay_of_Total__c</fullName>
    <label>Alipay % of Total</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>