unpackaged/main/default/objects/Opportunity/fields/Alipay_WeChat_Pay_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Alipay_WeChat_Pay_Annual_Value__c</fullName>
    <label>Alipay/WeChat Pay Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>