unpackaged/main/default/objects/Opportunity/fields/Alipay_WeChat_Pay_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Alipay_WeChat_Pay_Transactions__c</fullName>
    <label>Alipay/WeChat Pay Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>