unpackaged/main/default/objects/Opportunity/fields/Alipay_WeChat_UP__c.field-meta.xml
<CustomField>
    <fullName>Alipay_WeChat_UP__c</fullName>
    <formula>(Union_Pay_of_Total__c +  WeChat_of_Total__c +  Alipay_of_Total__c) *  Payments_Annual_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alipay WeChat &amp; UP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>