unpackaged/main/default/objects/Opportunity/fields/All_Additional_Income__c.field-meta.xml
<CustomField>
    <fullName>All_Additional_Income__c</fullName>
    <label>All Additional Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>