unpackaged/main/default/objects/Opportunity/fields/All_Alipay__c.field-meta.xml
<CustomField>
    <fullName>All_Alipay__c</fullName>
    <label>All Alipay %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>