unpackaged/main/default/objects/Opportunity/fields/All_AMEX__c.field-meta.xml
<CustomField>
    <fullName>All_AMEX__c</fullName>
    <label>All AMEX %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>