unpackaged/main/default/objects/Opportunity/fields/All_Annual_Eligible_Transactions__c.field-meta.xml
<CustomField>
    <fullName>All_Annual_Eligible_Transactions__c</fullName>
    <label>All Annual Eligible Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>