unpackaged/main/default/objects/Opportunity/fields/All_Annual_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>All_Annual_Net_Commission__c</fullName>
    <formula>(All_Annual_GC__c - All_Annual_GC__c *  All_Rebate__c ) + Additional_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Annual Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>