unpackaged/main/default/objects/Opportunity/fields/All_Annual_SiS__c.field-meta.xml
<CustomField>
    <fullName>All_Annual_SiS__c</fullName>
    <label>All Annual SiS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>