unpackaged/main/default/objects/Opportunity/fields/All_ATV__c.field-meta.xml
<CustomField>
    <fullName>All_ATV__c</fullName>
    <formula>IF(AND (All_Annual_SiS__c &gt; 0, All_Forms__c &gt; 0), All_Annual_SiS__c / All_Forms__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All ATV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>