unpackaged/main/default/objects/Opportunity/fields/All_Converted_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>All_Converted_Annual_Value__c</fullName>
    <label>All Converted Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>