unpackaged/main/default/objects/Opportunity/fields/All_Converted_Transactions__c.field-meta.xml
<CustomField>
    <fullName>All_Converted_Transactions__c</fullName>
    <label>All Converted Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>