unpackaged/main/default/objects/Opportunity/fields/All_Forms__c.field-meta.xml
<CustomField>
    <fullName>All_Forms__c</fullName>
    <label>All Forms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>