unpackaged/main/default/objects/Opportunity/fields/All_FY__c.field-meta.xml
<CustomField>
    <fullName>All_FY__c</fullName>
    <label>All FY GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>