unpackaged/main/default/objects/Opportunity/fields/All_FY_NC__c.field-meta.xml
<CustomField>
    <fullName>All_FY_NC__c</fullName>
    <formula>IF(Contract_Start_Date__c &lt; DATE(2020,01,01), All_Annual_Net_Commission__c * FY15__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All FY NC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>