unpackaged/main/default/objects/Opportunity/fields/All_GC_Per_Form__c.field-meta.xml
<CustomField>
    <fullName>All_GC_Per_Form__c</fullName>
    <formula>IF(AND(All_Annual_GC__c &gt; 0, All_Forms__c &gt; 0), (All_Annual_GC__c / All_Forms__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All GC Per Form</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>