unpackaged/main/default/objects/Opportunity/fields/All_GP__c.field-meta.xml
<CustomField>
    <fullName>All_GP__c</fullName>
    <label>All GP %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>