unpackaged/main/default/objects/Opportunity/fields/All_Hit_Rate__c.field-meta.xml
<CustomField>
    <fullName>All_Hit_Rate__c</fullName>
    <label>All Hit Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>