unpackaged/main/default/objects/Opportunity/fields/All_JCB__c.field-meta.xml
<CustomField>
    <fullName>All_JCB__c</fullName>
    <label>All JCB %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>