unpackaged/main/default/objects/Opportunity/fields/All_Match_Rate__c.field-meta.xml
<CustomField>
    <fullName>All_Match_Rate__c</fullName>
    <label>All Match Rate %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>