unpackaged/main/default/objects/Opportunity/fields/All_NC_Per_Form__c.field-meta.xml
<CustomField>
    <fullName>All_NC_Per_Form__c</fullName>
    <formula>IF(AND(All_Annual_Net_Commission__c &gt; 0, All_Forms__c &gt; 0) , (All_Annual_Net_Commission__c / All_Forms__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All NC Per Form</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>