unpackaged/main/default/objects/Opportunity/fields/All_Pay_by_Link_Annual_GP__c.field-meta.xml
<CustomField>
    <fullName>All_Pay_by_Link_Annual_GP__c</fullName>
    <label>All Pay by Link Annual GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>