unpackaged/main/default/objects/Opportunity/fields/All_Payments_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>All_Payments_Annual_Value__c</fullName>
    <label>All Payments Annual Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>