unpackaged/main/default/objects/Opportunity/fields/All_Payments_FY_GP__c.field-meta.xml
<CustomField>
    <fullName>All_Payments_FY_GP__c</fullName>
    <label>All Payments: FY GP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>