unpackaged/main/default/objects/Opportunity/fields/All_Rebate__c.field-meta.xml
<CustomField>
    <fullName>All_Rebate__c</fullName>
    <label>All Rebate % of GC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>