unpackaged/main/default/objects/Opportunity/fields/All_Union_Pay__c.field-meta.xml
<CustomField>
    <fullName>All_Union_Pay__c</fullName>
    <label>All Union Pay %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>