unpackaged/main/default/objects/Opportunity/fields/All_Value_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>All_Value_Per_Transaction__c</fullName>
    <label>All Value Per Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>