unpackaged/main/default/objects/Opportunity/fields/All_Variable_Fee_Per_Transaction__c.field-meta.xml
<CustomField>
    <fullName>All_Variable_Fee_Per_Transaction__c</fullName>
    <label>All Variable Fee Per Transaction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>