unpackaged/main/default/objects/Opportunity/fields/All_VISA_MC_Domestic_EEA__c.field-meta.xml
<CustomField>
    <fullName>All_VISA_MC_Domestic_EEA__c</fullName>
    <label>All VISA/MC Domestic/EEA %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>