unpackaged/main/default/objects/Opportunity/fields/All_VISA_MC_Domestic_EEA_of_Total__c.field-meta.xml
<CustomField>
    <fullName>All_VISA_MC_Domestic_EEA_of_Total__c</fullName>
    <label>All VISA/MC Domestic/EEA % of Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>