unpackaged/main/default/objects/Opportunity/fields/All_WeChat__c.field-meta.xml
<CustomField>
    <fullName>All_WeChat__c</fullName>
    <label>All WeChat %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>