unpackaged/main/default/objects/Opportunity/fields/All_WeChat_of_Total__c.field-meta.xml
<CustomField>
    <fullName>All_WeChat_of_Total__c</fullName>
    <label>All WeChat % of Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>