unpackaged/main/default/objects/Opportunity/fields/AMEX__c.field-meta.xml
<CustomField>
    <fullName>AMEX__c</fullName>
    <label>AMEX %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>