unpackaged/main/default/objects/Opportunity/fields/AMEX_of_Total__c.field-meta.xml
<CustomField>
    <fullName>AMEX_of_Total__c</fullName>
    <label>AMEX % of Total</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>