unpackaged/main/default/objects/Opportunity/fields/ANC1__c.field-meta.xml
<CustomField>
    <fullName>ANC1__c</fullName>
    <label>ANC1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>