unpackaged/main/default/objects/Opportunity/fields/ANC2__c.field-meta.xml
<CustomField>
    <fullName>ANC2__c</fullName>
    <label>ANC2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>