unpackaged/main/default/objects/Opportunity/fields/ANC3__c.field-meta.xml
<CustomField>
    <fullName>ANC3__c</fullName>
    <label>ANC3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>