unpackaged/main/default/objects/Opportunity/fields/Annual_NC_PFY_Variance__c.field-meta.xml
<CustomField>
    <fullName>Annual_NC_PFY_Variance__c</fullName>
    <formula>(Adj_Annual_Net_Commission__c /  TF_Annual_Net_Commission1__c) - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual NC PFY Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>