unpackaged/main/default/objects/Opportunity/fields/Annual_Net_Commission_1__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Commission_1__c</fullName>
    <formula>IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 2),  TF_Net_Commission_Actual__c / 0.05488870,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 3),  TF_Net_Commission_Actual__c / 0.1130595,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 4),  TF_Net_Commission_Actual__c / 0.1776266,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 5),  TF_Net_Commission_Actual__c / 0.251593,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 6),  TF_Net_Commission_Actual__c / 0.3332857,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 7),  TF_Net_Commission_Actual__c / 0.4330936,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 8),  TF_Net_Commission_Actual__c / 0.5533943,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 9),  TF_Net_Commission_Actual__c / 0.6631221,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 10),  TF_Net_Commission_Actual__c / 0.7758851,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 11),  TF_Net_Commission_Actual__c / 0.8579584,
IF(AND(Contract_Start_Date_Month__c = 2,  Calendar_Month__c = 12),  TF_Net_Commission_Actual__c / 0.9331973,0)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Net Commission 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>