unpackaged/main/default/objects/Opportunity/fields/Annual_Net_Commission_2__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Commission_2__c</fullName>
    <formula>IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 3),  TF_Net_Commission_Actual__c / 0.0581708,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 4),  TF_Net_Commission_Actual__c / 0.1227379,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 5),  TF_Net_Commission_Actual__c / 0.1967043,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 6),  TF_Net_Commission_Actual__c / 0.278397,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 7),  TF_Net_Commission_Actual__c / 0.3782049,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 8),  TF_Net_Commission_Actual__c / 0.4985056,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 9),  TF_Net_Commission_Actual__c / 0.6082334,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 10),  TF_Net_Commission_Actual__c / 0.7209964,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 11),  TF_Net_Commission_Actual__c / 0.8030697,
IF(AND(Contract_Start_Date_Month__c = 3,  Calendar_Month__c = 12),  TF_Net_Commission_Actual__c / 0.8783086,0))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Net Commission 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>