unpackaged/main/default/objects/Opportunity/fields/Annual_Net_Commission__c.field-meta.xml
<CustomField>
    <fullName>Annual_Net_Commission__c</fullName>
    <formula>ANC1__c + ANC2__c + ANC3__c + ANC4__c + ANC5__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Net Commission</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>