unpackaged/main/default/objects/Opportunity/fields/Approval_Advice_TF__c.field-meta.xml
<CustomField>
    <fullName>Approval_Advice_TF__c</fullName>
    <label>Approval Advice TF</label>
    <type>TextArea</type>
</CustomField>