unpackaged/main/default/objects/Opportunity/fields/Approver_s_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_User_ID__c</fullName>
    <description>used in TF approval to record approvers user id</description>
    <label>Approver’s User ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>