unpackaged/main/default/objects/Opportunity/fields/ATV__c.field-meta.xml
<CustomField>
    <fullName>ATV__c</fullName>
    <formula>IF(AND (TF_Annual_SiS__c &gt; 0, TF_Annual_Vouchers__c &gt; 0), TF_Annual_SiS__c /  TF_Annual_Vouchers__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TF : ATV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>