unpackaged/main/default/objects/Opportunity/fields/Avg_Trans_Value__c.field-meta.xml
<CustomField>
    <fullName>Avg_Trans_Value__c</fullName>
    <label>Avg Trans Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>