unpackaged/main/default/objects/Opportunity/fields/Booking_Engine__c.field-meta.xml
<CustomField>
    <fullName>Booking_Engine__c</fullName>
    <formula>Account.Booking_Engine__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Engine</label>
    <type>Text</type>
</CustomField>