unpackaged/main/default/objects/Opportunity/fields/Business_Approver__c.field-meta.xml
<CustomField>
    <fullName>Business_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>