unpackaged/main/default/objects/Opportunity/fields/BW_Hardware_Required__c.field-meta.xml
<CustomField>
    <fullName>BW_Hardware_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BW_Hardware_Required</label>
    <type>Checkbox</type>
</CustomField>