unpackaged/main/default/objects/Opportunity/fields/BW_TEMP_Charge_Migrated__c.field-meta.xml
<CustomField>
    <fullName>BW_TEMP_Charge_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporarily used during Product Restructure data migration (migrating charges to hardware)</description>
    <label>BW_TEMP_Charge_Migrated</label>
    <type>Checkbox</type>
</CustomField>