unpackaged/main/default/objects/Opportunity/fields/BW_TEMP_Reparented__c.field-meta.xml
<CustomField>
    <fullName>BW_TEMP_Reparented__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used during Product Restructure, for Account deduplication. Safe to delete.</description>
    <label>BW_TEMP_Reparented</label>
    <type>Checkbox</type>
</CustomField>