unpackaged/main/default/objects/Opportunity/fields/Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Month__c</fullName>
    <formula>Account.Calendar_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>