unpackaged/main/default/objects/Opportunity/fields/Capex_Detail__c.field-meta.xml
<CustomField>
    <fullName>Capex_Detail__c</fullName>
    <label>Capex Detail</label>
    <type>TextArea</type>
</CustomField>