unpackaged/main/default/objects/Opportunity/fields/Capex_Required__c.field-meta.xml
<CustomField>
    <fullName>Capex_Required__c</fullName>
    <label>Capex Required</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>