unpackaged/main/default/objects/Opportunity/fields/Chanel__c.field-meta.xml
<CustomField>
    <fullName>Chanel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ATM</fullName>
            </value>
            <value>
                <fullName>e-comm</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>