unpackaged/main/default/objects/Opportunity/fields/Chinese_SiS__c.field-meta.xml
<CustomField>
    <fullName>Chinese_SiS__c</fullName>
    <label>Chinese SiS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>