unpackaged/main/default/objects/Opportunity/fields/Company_Sector__c.field-meta.xml
<CustomField>
    <fullName>Company_Sector__c</fullName>
    <description>Account Company Sector - requested by Finance on 24/1/22</description>
    <formula>TEXT(Account.Company_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Sector</label>
    <type>Text</type>
</CustomField>