unpackaged/main/default/objects/Opportunity/fields/Company_Target_DCC__c.field-meta.xml
<CustomField>
    <fullName>Company_Target_DCC__c</fullName>
    <formula>707215</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Target DCC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>