unpackaged/main/default/objects/Opportunity/fields/Company_Target_TF__c.field-meta.xml
<CustomField>
    <fullName>Company_Target_TF__c</fullName>
    <formula>5557210</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Target TF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>