unpackaged/main/default/objects/Opportunity/fields/Continue_to_Signed__c.field-meta.xml
<CustomField>
    <fullName>Continue_to_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continue to Signed</label>
    <type>Checkbox</type>
</CustomField>