unpackaged/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <inlineHelpText>Date that the Contract is expected to start. Renamed from Contract Start Date.</inlineHelpText>
    <label>Go Live</label>
    <type>Date</type>
</CustomField>